--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
         <!-- search result section  -->
         <section>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
+            <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
+                <!-- <div class="col">
                     <div class="card">
                         <img src="" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -48,7 +48,7 @@
                             <p class="card-text">band name </p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
 
