get phone details

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </section>
 
         <!-- search result section  -->
-        <section>
-            <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
+        <section class="container my-5">
+            <div id="search-result" class="row row-cols-1 row-cols-sm-3 g-4">
                 <!-- <div class="col">
                     <div class="card">
                         <img src="" class="card-img-top" alt="...">
