--- a/index.html
+++ b/index.html
@@ -42,17 +42,20 @@
         <section>
             <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="true" tabindex="-1"
                 aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                <div class="modal-dialog modal-lg modal-dialog-centered">
+                <div class="modal-dialog modal-xl modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div id="phone-details" class="modal-body">
-                            <div class="modal-body">
-                        </div>
                     </div>
                 </div>
             </div>
+        </section>
+
+        <!-- not Found section -->
+        <section id="not-found" class="text-center text-danger">
+            <h1>Search items "Not Found"</h1>
         </section>
 
         <!-- search result section  -->
