--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phone Finder</title>
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 
     <!-- bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,15 +27,54 @@
 
 <body>
     <header>
-        <h1 class="text-center my-4 container">Welcome to Phone Finder <i class="fa-solid fa-magnifying-glass"></i></h1>
+        <!-- navbar  -->
+        <nav class="navbar navbar-expand-lg navbar-dark nav-section">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="img/logo.png" alt="" width="60" height="60" class="d-inline-block align-text-center">
+                    Phone Finder
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+            </div>
+            <div class="collapse navbar-collapse nav-text" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Home</a>
+                    </li>
+                    <li class="nav-item dropdown ">
+                        <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Phone List
+                        </a>
+                        <ul class="dropdown-menu dropdown-section" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" onclick="dropDown('iphone')">Iphone</a></li>
+                            <li><a class="dropdown-item" onclick="dropDown('samsung')">Samsung</a></li>
+                            <li><a class="dropdown-item" onclick="dropDown('oppo')">Oppo</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
+
     <main>
+        <!-- welcome section  -->
+        <section>
+            <h1 class="text-center my-4 container">Welcome to Phone Finder</h1>
+            <div class="container w-50"><img src="img/bg01.png" class="img-fluid" alt=""></div>
+        </section>
 
         <!-- search section  -->
-        <section class="container d-flex justify-content-center gap-2 my-5">
-            <input id="search-input" class="rounded border-1" type="text">
-            <button onclick="getSearch()" class="btn btn-info"><i
-                    class="fa-solid fa-magnifying-glass"></i>Search</button>
+        <section class="container w-75 mx-auto">
+            <div class="input-group mb-3">
+                <input id="search-input" type="text" class="form-control" placeholder="search Phone name, model">
+                <button onclick="getSearch()" class="btn btn-outline-secondary search-button" type="button"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
+            </div>
         </section>
 
         <!-- phone details  -->
@@ -44,13 +84,13 @@
                 aria-labelledby="staticBackdropLabel" aria-hidden="true">
                 <div class="modal-dialog modal-xl modal-dialog-centered">
                     <div class="modal-content">
-                        <div class="modal-header">
+                        <div class="modal-header border-0">
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div id="phone-details" class="modal-body">
+                        </div>
                     </div>
                 </div>
-            </div>
         </section>
 
         <!-- not Found section -->
