--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
                     </div>
                 </div>
         </section>
+        <!-- spinner section  -->
+        <section id="spinner-section">
+            <div class="d-flex justify-content-center my-5 fs-5">
+                <div class="spinner-border" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+              </div>
+        </section>
 
         <!-- not Found section -->
         <section id="not-found" class="text-center text-danger">
