--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- navbar  -->
         <nav class="navbar navbar-expand-lg navbar-dark nav-section">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="https://phonefinder-app.netlify.app/">
                     <img src="img/logo.png" alt="" width="60" height="60" class="d-inline-block align-text-center">
                     Phone Finder
                 </a>
