--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="sticky-lg-top">
         <!-- navbar  -->
         <nav class="navbar navbar-expand-lg navbar-dark nav-section">
             <div class="container">
@@ -44,7 +44,7 @@
             <div class="collapse navbar-collapse nav-text" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Home</a>
+                        <a class="nav-link text-white" href="#home">Home</a>
                     </li>
                     <li class="nav-item dropdown ">
                         <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdownMenuLink"
@@ -65,7 +65,7 @@
     <main>
         <!-- welcome section  -->
         <section>
-            <h1 class="text-center my-4 container">Welcome to Phone Finder</h1>
+            <h1 id="home" class="text-center my-4 container">Welcome to Phone Finder</h1>
             <div class="container w-50"><img src="img/bg01.png" class="img-fluid" alt=""></div>
         </section>
 
@@ -109,7 +109,18 @@
         <!-- search result section  -->
         <section class="container my-5">
             <div id="search-result" class="row row-cols-1 row-cols-sm-3 g-4">
+            </div>
+        </section>
+        
+        <!-- show more button  -->
+        <div id="show-more-button">
+            <button class="d-flex mx-auto btn btn-info details-button" onclick="showOverResult()">Show More</button>
+        </div>
 
+        <!-- search  over result section  -->
+        <section class="container my-5" id="show-more-display">
+            <!-- show more result  -->
+            <div id="show-more-result" class="row row-cols-1 row-cols-sm-3 g-4">
             </div>
         </section>
 
