--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         
         <!-- show more button  -->
         <div id="show-more-button">
-            <button class="d-flex mx-auto btn btn-info details-button" onclick="showOverResult()">Show More</button>
+            <button class="d-flex mx-auto btn btn-info details-button my-3" onclick="showOverResult()">Show More</button>
         </div>
 
         <!-- search  over result section  -->
@@ -123,8 +123,15 @@
             <div id="show-more-result" class="row row-cols-1 row-cols-sm-3 g-4">
             </div>
         </section>
-
     </main>
+
+    <footer>
+        <div class="footer-section">
+            <div class="footer-text">
+                <p>Copyright © 2022 Phone Finder<br>All rights reserved</p>
+            </div>
+          </div>
+    </footer>
 
 
 
