add search items count

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
               </div>
         </section>
 
+        <!-- search result found -->
+        <section  id="result-found" class="text-center">
+            <h1>Search items " <span id="result-text"></span> "</h1>
+        </section>
+
         <!-- not Found section -->
         <section id="not-found" class="text-center text-danger">
             <h1>Search items "Not Found"</h1>
