--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <!-- search result found -->
         <section  id="result-found" class="text-center">
-            <h1>Search items " <span id="result-text"></span> "</h1>
+            <h1>Total Result " <span id="result-text"></span> "</h1>
         </section>
 
         <!-- not Found section -->
