--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
               </div>
         </section>
 
+        <!-- empty fill -->
+        <section  id="fill-error" class="text-center text-danger">
+            <h1>Please fill the input field</h1>
+        </section>
         <!-- search result found -->
         <section  id="result-found" class="text-center">
             <h1>Total Result " <span id="result-text"></span> "</h1>
